# MTH9815-Final

./: README.md
TradingSystem/: CMakeLists.txt  GUIservice.hpp  algoexecutionservice.hpp  algostreamingservice.hpp  datagen.hpp  executionservice.hpp  functions.hpp  historicaldataservice.hpp  inquiryservice.hpp  main.cpp  marketdataservice.hpp  positionservice.hpp  pricingservice.hpp  products.hpp  riskservice.hpp  soa.hpp  streamingservice.hpp  tradebookingservice.hpp
TradingSystem/data/: aggregatedinquiries.txt  inquiries.txt  prices.txt  risk.txt  streaming.txt  trades.txt
